--- a/Launcher/Launcher/Configuration.fxml
+++ b/Launcher/Launcher/Configuration.fxml
@@ -12,9 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<SplitPane fx:controller="Launcher.LauncherController"
-dividerPositions="0.9145077720207254" minHeight="550.0" minWidth="700.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.9145077720207254" minHeight="550.0" minWidth="700.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Launcher.LauncherController">
   <items>
       <AnchorPane maxHeight="350.0" maxWidth="513.0" minHeight="350.0" minWidth="800.0" prefHeight="350.0" prefWidth="800.0">
          <children>
@@ -48,22 +46,22 @@ dividerPositions="0.9145077720207254" minHeight="550.0" minWidth="700.0" orienta
             <RowConstraints maxHeight="150.0" minHeight="150.0" prefHeight="150.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ImageView fx:id="ticTacToe" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" GridPane.rowIndex="1">
+            <ImageView fx:id="ticTacToe" fitHeight="150.0" fitWidth="150.0" onMouseClicked="#startTicTacToe" pickOnBounds="true" GridPane.rowIndex="1">
                <image>
                   <Image url="@../../resources/tic-tac-toe-icon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="Othello" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <ImageView fx:id="checkers" fitHeight="150.0" fitWidth="150.0" onMouseClicked="#startCheckers" pickOnBounds="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <image>
-                  <Image url="@../../resources/Othello-icon.png" />
+                  <Image url="@../../resources/checkers-icon.jpg" />
                </image>
             </ImageView>
-            <ImageView fx:id="Memory" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <ImageView fx:id="memory" fitHeight="150.0" fitWidth="150.0" onMouseClicked="#startMemory" pickOnBounds="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <image>
                   <Image url="@../../resources/memory-icon.jpg" />
                </image>
             </ImageView>
-            <ImageView fx:id="Battleship" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <ImageView fx:id="battleship" fitHeight="150.0" fitWidth="150.0" onMouseClicked="#startBattleship" pickOnBounds="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <image>
                   <Image url="@../../resources/battleship-icon.jpg" />
                </image>
