--- a/src/Launcher/Configuration.fxml
+++ b/src/Launcher/Configuration.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,26 +14,35 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.9145077720207254" minHeight="550.0" minWidth="700.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Launcher.LauncherController">
+<SplitPane dividerPositions="0.9145077720207254" minHeight="550.0" minWidth="700.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Launcher.LauncherController">
   <items>
       <AnchorPane maxHeight="350.0" maxWidth="513.0" minHeight="350.0" minWidth="800.0" prefHeight="350.0" prefWidth="800.0">
          <children>
-            <TextField fx:id="p1Name" layoutX="346.0" layoutY="242.0" />
-            <TextField fx:id="p2Name" layoutX="346.0" layoutY="298.0" />
+            <TextField fx:id="p1Name" layoutX="214.0" layoutY="245.0" prefHeight="25.0" prefWidth="92.0" />
+            <TextField fx:id="p2Name" layoutX="214.0" layoutY="301.0" prefHeight="25.0" prefWidth="92.0" />
             <Text id="welcomeText" layoutX="143.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME TO GAME BOARD LAUNCHER" textAlignment="CENTER" wrappingWidth="514.0">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
-            <Text layoutX="232.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1's Name" textAlignment="CENTER" />
-            <Text layoutX="232.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 2's Name" textAlignment="CENTER" />
-            <Button fx:id="confirmP1" layoutX="515.0" layoutY="242.0" mnemonicParsing="false" onAction="#confirmP1Clicked" text="OK" />
-            <Button fx:id="confirmP2" layoutX="515.0" layoutY="298.0" mnemonicParsing="false" onAction="#confirmP2Clicked" text="OK" />
-            <ImageView fitHeight="175.0" fitWidth="272.0" layoutX="275.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+            <Text layoutX="117.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1's Name" textAlignment="CENTER" />
+            <Text layoutX="118.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player 2's Name" textAlignment="CENTER" />
+            <Button fx:id="confirmP1" layoutX="319.0" layoutY="245.0" mnemonicParsing="false" onAction="#confirmP1Clicked" text="OK" />
+            <Button fx:id="confirmP2" layoutX="319.0" layoutY="301.0" mnemonicParsing="false" onAction="#confirmP2Clicked" text="OK" />
+            <ImageView fitHeight="175.0" fitWidth="235.0" layoutX="117.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../resources/Board_Game_Icons.jpg" />
                </image>
             </ImageView>
+            <TableView id="Leaderboard" fx:id="leaderboard" layoutX="370.0" layoutY="54.0" prefHeight="271.0" prefWidth="324.0">
+              <columns>
+                <TableColumn fx:id="playerNames" prefWidth="63.66668701171875" text="Players" />
+                <TableColumn fx:id="ticTacToeScores" prefWidth="71.66668701171875" text="Tic Tac Toe" />
+                  <TableColumn fx:id="othelloScores" prefWidth="58.33331298828125" text="Othello" />
+                  <TableColumn fx:id="memoryScores" prefWidth="58.3333740234375" text="Memory" />
+                  <TableColumn fx:id="battleshipScores" prefWidth="75.0" text="Battleship" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
       <GridPane hgap="25.0" minHeight="150.0" minWidth="500.0" prefHeight="150.0" prefWidth="500.0" vgap="10.0">
@@ -51,9 +62,9 @@
                   <Image url="@/resources/tic-tac-toe-icon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="150.0" fitWidth="150.0" onMouseClicked="#startCheckers" pickOnBounds="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <ImageView fitHeight="150.0" fitWidth="150.0" onMouseClicked="#startOthello" pickOnBounds="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <image>
-                  <Image url="@/resources/checkers-icon.jpg" />
+                  <Image url="@/resources/Othello-icon.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="150.0" fitWidth="150.0" onMouseClicked="#startMemory" pickOnBounds="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
